Visibility within LivingRoom

--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -98,7 +98,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [EditorStartup]
-LastLevel=/Game/abandonedroom_Migration
+LastLevel=/Game/Living_Room
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
@@ -259,7 +259,6 @@ CapsuleComponent="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Assets/Charlotte/Assets/Doors/Door_Group_SM_Door_04_low_Blueprint.Door_Group_SM_Door_04_low_Blueprint
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -318,8 +317,9 @@ GridEnabled=False
 SnapScaleEnabled=False
 
 [MRU]
-MRUItem0=/Game/abandonedroom_Migration
+MRUItem0=/Game/Living_Room
 MRUItem1=/Game/attic_migration
+MRUItem2=/Game/abandonedroom_Migration
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Assets/Amy/Textures
@@ -356,7 +356,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/Charlotte/Assets/Doors
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -892,9 +892,60 @@ BoxComponent.Tags=True
 BoxComponent.ComponentReplication=True
 BoxComponent.Cooking=True
 BoxComponent.Events=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.Lightmass=True
+DirectionalLight.LightShafts=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.RayTracing=True
+DirectionalLight.AtmosphereAndCloud=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.HLOD=True
+DirectionalLight.Physics=True
+DirectionalLight.Networking=True
+DirectionalLight.Actor=True
+SkyAtmosphere.TransformCommon=True
+SkyAtmosphere.Planet=True
+SkyAtmosphere.Atmosphere=True
+SkyAtmosphere.Atmosphere - Rayleigh=True
+SkyAtmosphere.Atmosphere - Mie=True
+SkyAtmosphere.Atmosphere - Absorption=True
+SkyAtmosphere.Art Direction=True
+SkyAtmosphere.Rendering=True
+SkyAtmosphere.Physics=True
+SkyAtmosphere.Tags=True
+SkyAtmosphere.Activation=True
+SkyAtmosphere.Cooking=True
+SkyAtmosphere.Replication=True
+SkyAtmosphere.Networking=True
+SkyAtmosphere.Actor=True
+ExponentialHeightFog.TransformCommon=True
+ExponentialHeightFog.ExponentialHeightFogComponent=True
+ExponentialHeightFog.InscatteringTexture=True
+ExponentialHeightFog.DirectionalInscattering=True
+ExponentialHeightFog.VolumetricFog=True
+ExponentialHeightFog.Rendering=True
+ExponentialHeightFog.Physics=True
+ExponentialHeightFog.Tags=True
+ExponentialHeightFog.Activation=True
+ExponentialHeightFog.Cooking=True
+ExponentialHeightFog.Replication=True
+ExponentialHeightFog.Networking=True
+ExponentialHeightFog.Actor=True
+Info.TransformCommon=True
+Info.Rendering=True
+Info.Replication=True
+Info.Physics=True
+Info.Networking=True
+Info.Actor=True
 
 [RootWindow]
-ScreenPosition=X=484.000 Y=580.667
+ScreenPosition=X=484.000 Y=580.000
 WindowSize=X=1290.000 Y=730.000
 InitiallyMaximized=True
 
@@ -912,7 +963,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=D:/GroupMorriganHall/MorriganHall/MorriganHall/Content
+UNR=../../../../../../Game Projects/Morrigan Hall Github/MorriganHall/MorriganHall/Content
 BRUSH=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 FBX=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 FBXAnim=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
@@ -1622,10 +1673,10 @@ CollectionManager.TimeStamp=2023.04.01-15.26.09
 CollectionManager.LastCompileMethod=Unknown
 ContentBrowserAssetDataSource.TimeStamp=2023.04.01-15.28.12
 ContentBrowserAssetDataSource.LastCompileMethod=Unknown
-Bridge.TimeStamp=2023.03.24-08.35.06
-Bridge.LastCompileMethod=Unknown
-MegascansPlugin.TimeStamp=2023.03.24-08.35.06
-MegascansPlugin.LastCompileMethod=Unknown
+Bridge.TimeStamp=2023.03.24-12.01.03
+Bridge.LastCompileMethod=External
+MegascansPlugin.TimeStamp=2023.03.24-12.01.03
+MegascansPlugin.LastCompileMethod=External
 AudioSynesthesiaEditor.TimeStamp=2023.04.01-15.29.43
 AudioSynesthesiaEditor.LastCompileMethod=Unknown
 TakesCore.TimeStamp=2023.04.01-15.29.54
@@ -1932,9 +1983,12 @@ ExternalImagePicker.TimeStamp=2022.12.30-15.28.56
 ExternalImagePicker.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2022.12.30-15.29.01
 TextureEditor.LastCompileMethod=Unknown
+GeometryProcessingInterfaces.TimeStamp=2023.03.22-10.15.53
+GeometryProcessingInterfaces.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=E:/Program Files/Unreal Engine/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE5/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
@@ -2050,6 +2104,11 @@ UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Enhan
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.SkyAtmosphere;/Engine/Transient.ActorFactorySkyAtmosphere_0
+RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
+RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
+RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Assets/Charlotte/Assets/Doors/Door_Group_SM_Door_04_low.Door_Group_SM_Door_04_low;
 RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_21
@@ -2065,11 +2124,6 @@ RecentlyPlaced=/Game/M4/Tashan/Assets/wallpapers_sm_wallpaper_004.wallpapers_sm_
 RecentlyPlaced=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01_Inst.M_Wood_01_Inst;
 RecentlyPlaced=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01.M_Wood_01;
 RecentlyPlaced=/Game/Assets/Amy/Textures/M_Gramophone_Inst.M_Gramophone_Inst;
-RecentlyPlaced=/Game/Assets/Amy/Textures/M_JewelleryBox_Inst.M_JewelleryBox_Inst;
-RecentlyPlaced=/Game/Assets/Amy/Textures/M_JewelleryBox.M_JewelleryBox;
-RecentlyPlaced=/Game/Assets/Amy/Textures/CG_Gramophone_combine_low_UE.CG_Gramophone_combine_low_UE;
-RecentlyPlaced=/Game/Assets/Amy/Textures/JewelleryBox_low_Top.JewelleryBox_low_Top;
-RecentlyPlaced=/Game/Assets/Amy/Textures/JewelleryBox_low_Bottom.JewelleryBox_low_Bottom;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2187,26 +2241,26 @@ bConvertSceneUnit=False
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Charlotte/Assets/Doors/Door_Group_SM_Door_04_low_Blueprint
-MRUItem1=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01_Inst
-MRUItem2=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01
-MRUItem3=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_01_BaseColor
-MRUItem4=/Game/M4/Tashan/Assets/mat_blend_Inst2
-MRUItem5=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01_Inst
-MRUItem6=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01
-MRUItem7=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Brick_01
-MRUItem8=/Game/Assets/Amy/Textures/M_Doublebase
-MRUItem9=/Game/Assets/Amy/Textures/M_Gramophone_Inst
-MRUItem10=/Game/Assets/Amy/Textures/CG_Gramophone_low_1_lambert1_OcclusionRoughnessMetallic
-MRUItem11=/Game/Assets/Amy/Textures/M_Gramophone
-MRUItem12=/Game/Assets/Amy/Textures/M_JewelleryBox_Inst
-MRUItem13=/Game/Assets/Amy/Textures/M_JewelleryBox
-MRUItem14=/Game/Assets/Amy/Textures/Jewellery_box_v1_high_lambert1_Normal
-MRUItem15=/Game/Assets/Amy/Textures/CG_Gramophone_combine_low_UE
-MRUItem16=/Game/Assets/Amy/Textures/Jewellery_box_v1_high_lambert1_BaseColor
-MRUItem17=/Game/Assets/Amy/Textures/M_Doublebase_Inst
-MRUItem18=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert1_OcclusionRoughnessMetallic
-MRUItem19=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert4_OcclusionRoughnessMetallic
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/attic_migration
+MRUItem2=/Game/Assets/Aziz/A_plank
+MRUItem3=/Game/Assets/Charlotte/Assets/Doors/Door_Group_SM_Door_04_low_Blueprint
+MRUItem4=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01_Inst
+MRUItem5=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01
+MRUItem6=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_01_BaseColor
+MRUItem7=/Game/M4/Tashan/Assets/mat_blend_Inst2
+MRUItem8=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01_Inst
+MRUItem9=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01
+MRUItem10=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Brick_01
+MRUItem11=/Game/Assets/Amy/Textures/M_Doublebase
+MRUItem12=/Game/Assets/Amy/Textures/M_Gramophone_Inst
+MRUItem13=/Game/Assets/Amy/Textures/CG_Gramophone_low_1_lambert1_OcclusionRoughnessMetallic
+MRUItem14=/Game/Assets/Amy/Textures/M_Gramophone
+MRUItem15=/Game/Assets/Amy/Textures/M_JewelleryBox_Inst
+MRUItem16=/Game/Assets/Amy/Textures/M_JewelleryBox
+MRUItem17=/Game/Assets/Amy/Textures/Jewellery_box_v1_high_lambert1_Normal
+MRUItem18=/Game/Assets/Amy/Textures/CG_Gramophone_combine_low_UE
+MRUItem19=/Game/Assets/Amy/Textures/Jewellery_box_v1_high_lambert1_BaseColor
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
@@ -2232,6 +2286,7 @@ MRUItem19=/Game/Assets/Amy/Textures/notexture_doublebass_low_lambert4_OcclusionR
 /Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01_Inst.Wall_Paper_Char_01_Inst=1
 /Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01.Wall_Paper_Char_01=1
 /Game/abandonedroom_Migration.abandonedroom_Migration:PersistentLevel.abandonedroom_Migration=1
+/Game/Assets/Aziz/A_plank.A_plank=1
 
 [MaterialEditor]
 PrimType=1
