--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -256,6 +256,10 @@ BrushComponent="\"Object\" "
 BoxComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 CapsuleComponent="\"Object\" "
+MaterialExpressionTextureSampleParameter2D="\"Object\" "
+MaterialExpressionTextureSampleParameter="\"Object\" "
+MaterialExpressionStaticBoolParameter="\"Object\" "
+MaterialExpressionStaticSwitchParameter="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -322,7 +326,7 @@ MRUItem1=/Game/attic_migration
 MRUItem2=/Game/abandonedroom_Migration
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Assets/Amy/Textures
+ContentBrowserTab1.SelectedPaths=/Game/Assets/Aziz/Assets/Fireplace
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=True
@@ -943,6 +947,18 @@ Info.Replication=True
 Info.Physics=True
 Info.Networking=True
 Info.Actor=True
+MaterialExpressionTextureSampleParameter2D.General=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpression=True
+MaterialExpressionTextureSampleParameter2D.ParameterCustomization=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
+Texture2D.Interchange =True
+MaterialExpressionStaticBoolParameter.General=True
+MaterialExpressionStaticBoolParameter.MaterialExpressionStaticBoolParameter=True
+MaterialExpressionStaticBoolParameter.MaterialExpression=True
+MaterialExpressionStaticSwitchParameter.General=True
+MaterialExpressionStaticSwitchParameter.MaterialExpressionStaticBoolParameter=True
+MaterialExpressionStaticSwitchParameter.MaterialExpression=True
 
 [RootWindow]
 ScreenPosition=X=484.000 Y=580.000
@@ -1998,7 +2014,7 @@ bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
 [DetailCustomWidgetExpansion]
-MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
 MaterialInstanceConstant=
 GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,
 CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,
@@ -2153,7 +2169,7 @@ bBuildNanite=False
 bGenerateLightmapUVs=True
 bOneConvexHullPerUCX=True
 bAutoGenerateCollision=True
-bCombineMeshes=False
+bCombineMeshes=True
 DistanceFieldResolutionScale=1.000000
 bTransformVertexToAbsolute=True
 bBakePivotInVertex=False
@@ -2238,29 +2254,29 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Living_Room
-MRUItem1=/Game/attic_migration
-MRUItem2=/Game/Assets/Aziz/A_plank
-MRUItem3=/Game/Assets/Charlotte/Assets/Doors/Door_Group_SM_Door_04_low_Blueprint
-MRUItem4=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01_Inst
-MRUItem5=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01
-MRUItem6=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_01_BaseColor
-MRUItem7=/Game/M4/Tashan/Assets/mat_blend_Inst2
-MRUItem8=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01_Inst
-MRUItem9=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01
-MRUItem10=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Brick_01
-MRUItem11=/Game/Assets/Amy/Textures/M_Doublebase
-MRUItem12=/Game/Assets/Amy/Textures/M_Gramophone_Inst
-MRUItem13=/Game/Assets/Amy/Textures/CG_Gramophone_low_1_lambert1_OcclusionRoughnessMetallic
-MRUItem14=/Game/Assets/Amy/Textures/M_Gramophone
-MRUItem15=/Game/Assets/Amy/Textures/M_JewelleryBox_Inst
-MRUItem16=/Game/Assets/Amy/Textures/M_JewelleryBox
-MRUItem17=/Game/Assets/Amy/Textures/Jewellery_box_v1_high_lambert1_Normal
-MRUItem18=/Game/Assets/Amy/Textures/CG_Gramophone_combine_low_UE
-MRUItem19=/Game/Assets/Amy/Textures/Jewellery_box_v1_high_lambert1_BaseColor
+MRUItem0=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture8
+MRUItem1=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture7
+MRUItem2=/Game/Assets/Aziz/Assets/Fireplace/Fireplace
+MRUItem3=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture6
+MRUItem4=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture5
+MRUItem5=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture4
+MRUItem6=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture3
+MRUItem7=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture2
+MRUItem8=/Game/Assets/Aziz/Assets/Fireplace/MM_FireplaceTexture1
+MRUItem9=/Game/Assets/Aziz/Assets/Fireplace/Fireplace_low_1009_OcclusionRoughnessMetallic
+MRUItem10=/Game/Assets/Aziz/Assets/Fireplace/Fireplace_low_1008_OcclusionRoughnessMetallic
+MRUItem11=/Game/Assets/Aziz/Assets/Fireplace/Fireplace_low_1007_OcclusionRoughnessMetallic
+MRUItem12=/Game/Assets/Aziz/Assets/Fireplace/Fireplace_low_1006_OcclusionRoughnessMetallic
+MRUItem13=/Game/Assets/Aziz/Assets/Fireplace/Fireplace_low_1005_OcclusionRoughnessMetallic
+MRUItem14=/Game/Assets/Aziz/Assets/Fireplace/Fireplace_low_1004_OcclusionRoughnessMetallic
+MRUItem15=/Game/Assets/Aziz/Assets/Fireplace/Fireplace_low_1003_OcclusionRoughnessMetallic
+MRUItem16=/Game/Assets/Aziz/Assets/Fireplace/Fireplace_low_1002_OcclusionRoughnessMetallic
+MRUItem17=/Game/Assets/Aziz/Assets/Fireplace/Fireplace_low_1001_OcclusionRoughnessMetallic
+MRUItem18=/Game/Living_Room
+MRUItem19=/Game/attic_migration
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
@@ -2287,6 +2303,24 @@ MRUItem19=/Game/Assets/Amy/Textures/Jewellery_box_v1_high_lambert1_BaseColor
 /Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01.Wall_Paper_Char_01=1
 /Game/abandonedroom_Migration.abandonedroom_Migration:PersistentLevel.abandonedroom_Migration=1
 /Game/Assets/Aziz/A_plank.A_plank=1
+/Game/Assets/Aziz/Assets/Fireplace/MM_FireplaceTexture1.MM_FireplaceTexture1=1
+/Game/Assets/Aziz/Assets/Fireplace/Fireplace_low_1001_OcclusionRoughnessMetallic.Fireplace_low_1001_OcclusionRoughnessMetallic=1
+/Game/Assets/Aziz/Assets/Fireplace/Fireplace_low_1002_OcclusionRoughnessMetallic.Fireplace_low_1002_OcclusionRoughnessMetallic=1
+/Game/Assets/Aziz/Assets/Fireplace/Fireplace_low_1003_OcclusionRoughnessMetallic.Fireplace_low_1003_OcclusionRoughnessMetallic=1
+/Game/Assets/Aziz/Assets/Fireplace/Fireplace_low_1004_OcclusionRoughnessMetallic.Fireplace_low_1004_OcclusionRoughnessMetallic=1
+/Game/Assets/Aziz/Assets/Fireplace/Fireplace_low_1005_OcclusionRoughnessMetallic.Fireplace_low_1005_OcclusionRoughnessMetallic=1
+/Game/Assets/Aziz/Assets/Fireplace/Fireplace_low_1006_OcclusionRoughnessMetallic.Fireplace_low_1006_OcclusionRoughnessMetallic=1
+/Game/Assets/Aziz/Assets/Fireplace/Fireplace_low_1007_OcclusionRoughnessMetallic.Fireplace_low_1007_OcclusionRoughnessMetallic=1
+/Game/Assets/Aziz/Assets/Fireplace/Fireplace_low_1008_OcclusionRoughnessMetallic.Fireplace_low_1008_OcclusionRoughnessMetallic=1
+/Game/Assets/Aziz/Assets/Fireplace/Fireplace_low_1009_OcclusionRoughnessMetallic.Fireplace_low_1009_OcclusionRoughnessMetallic=1
+/Game/Assets/Aziz/Assets/Fireplace/Fireplace.Fireplace=1
+/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture2.MI_FireplaceTexture2=1
+/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture3.MI_FireplaceTexture3=1
+/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture4.MI_FireplaceTexture4=1
+/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture5.MI_FireplaceTexture5=1
+/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture6.MI_FireplaceTexture6=1
+/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture7.MI_FireplaceTexture7=1
+/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture8.MI_FireplaceTexture8=1
 
 [MaterialEditor]
 PrimType=1
@@ -2545,6 +2579,7 @@ WmfMediaSettings=True
 [DetailCategoriesAdvanced]
 Texture2DArray.LevelOfDetail=False
 MaterialEditorInstanceConstant.General=True
+FbxImportUI.Mesh=True
 
 [FEditorModeTools]
 CoordSystem=1
