--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -262,7 +262,7 @@ MaterialExpressionStaticBoolParameter="\"Object\" "
 MaterialExpressionStaticSwitchParameter="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -359,7 +359,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/Aziz/Assets/Fireplace
+ContentBrowserDrawer.SelectedPaths=/Game/Assets/Aziz/Assets
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -428,6 +428,7 @@ Texture2D.LevelOfDetail=True
 Texture2D.Compression=True
 Texture2D.Interchange=True
 Texture2D.Interchange=False
+Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Texture=True
 Texture2D.Adjustments=True
@@ -951,7 +952,6 @@ MaterialExpressionTextureSampleParameter2D.MaterialExpression=True
 MaterialExpressionTextureSampleParameter2D.ParameterCustomization=True
 MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureSample=True
 MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
-Texture2D.Interchange =True
 MaterialExpressionStaticBoolParameter.General=True
 MaterialExpressionStaticBoolParameter.MaterialExpressionStaticBoolParameter=True
 MaterialExpressionStaticBoolParameter.MaterialExpression=True
@@ -2010,7 +2010,6 @@ RecentsFiles=C:/UE5/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/in
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
@@ -2121,6 +2120,9 @@ UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Enhan
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_Curtains.SM_Curtains;
+RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_Table.SM_Table;
+RecentlyPlaced=/Game/Assets/Charlotte/Cupboard.Cupboard;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_1mSofa.SM_1mSofa;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_2mSofa.SM_2mSofa;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/RockingChair/RockingChair_low.RockingChair_low;
@@ -2138,9 +2140,6 @@ RecentlyPlaced=/Game/Assets/Charlotte/Assets/Doors/Door_Group_SM_Door_04_low.Doo
 RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_21
 RecentlyPlaced=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01_Inst.Wall_Paper_Char_01_Inst;
 RecentlyPlaced=/Game/M4/Tashan/Assets/wallpapers_sm_wallpaper_002.wallpapers_sm_wallpaper_002;
-RecentlyPlaced=/Game/M4/Tashan/Assets/wallpapers_sm_wallpaper_4.wallpapers_sm_wallpaper_4;
-RecentlyPlaced=/Game/M4/Tashan/Assets/wallpaperdefault.wallpaperdefault;
-RecentlyPlaced=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Concrete_01.M_Concrete_01;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2259,25 +2258,25 @@ LastLogListing=FBXImport
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Assets/Aziz/Assets/Fireplace/ID_1
-MRUItem1=/Game/Assets/Aziz/Assets/SM_1mSofa
-MRUItem2=/Game/Assets/Aziz/Assets/SM_2mSofa
-MRUItem3=/Game/Assets/Aziz/Assets/RockingChair/RockingChair_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem4=/Game/Assets/Aziz/Assets/RockingChair/RockingChair_low
-MRUItem5=/Game/Assets/Aziz/Assets/RockingChair/MI_RockingChair
-MRUItem6=/Game/Assets/Aziz/Assets/SM_WindowTile
-MRUItem7=/Game/Assets/Aziz/Assets/SM_WallTile
-MRUItem8=/Game/Living_Room
-MRUItem9=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture8
-MRUItem10=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture7
-MRUItem11=/Game/Assets/Aziz/Assets/Fireplace/Fireplace
-MRUItem12=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture6
-MRUItem13=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture5
-MRUItem14=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture4
-MRUItem15=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture3
-MRUItem16=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture2
-MRUItem17=/Game/Assets/Aziz/Assets/Fireplace/MM_FireplaceTexture1
-MRUItem18=/Game/Assets/Aziz/Assets/Fireplace/Fireplace_low_1009_OcclusionRoughnessMetallic
-MRUItem19=/Game/Assets/Aziz/Assets/Fireplace/Fireplace_low_1008_OcclusionRoughnessMetallic
+MRUItem1=/Game/Assets/Aziz/Assets/SM_Curtains
+MRUItem2=/Game/Assets/Aziz/Assets/SM_Table
+MRUItem3=/Game/Living_Room
+MRUItem4=/Game/Assets/Aziz/Assets/SM_1mSofa
+MRUItem5=/Game/Assets/Aziz/Assets/SM_2mSofa
+MRUItem6=/Game/Assets/Aziz/Assets/RockingChair/RockingChair_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem7=/Game/Assets/Aziz/Assets/RockingChair/RockingChair_low
+MRUItem8=/Game/Assets/Aziz/Assets/RockingChair/MI_RockingChair
+MRUItem9=/Game/Assets/Aziz/Assets/SM_WindowTile
+MRUItem10=/Game/Assets/Aziz/Assets/SM_WallTile
+MRUItem11=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture8
+MRUItem12=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture7
+MRUItem13=/Game/Assets/Aziz/Assets/Fireplace/Fireplace
+MRUItem14=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture6
+MRUItem15=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture5
+MRUItem16=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture4
+MRUItem17=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture3
+MRUItem18=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture2
+MRUItem19=/Game/Assets/Aziz/Assets/Fireplace/MM_FireplaceTexture1
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
@@ -2330,6 +2329,8 @@ MRUItem19=/Game/Assets/Aziz/Assets/Fireplace/Fireplace_low_1008_OcclusionRoughne
 /Game/Assets/Aziz/Assets/RockingChair/RockingChair_low.RockingChair_low=1
 /Game/Assets/Aziz/Assets/SM_2mSofa.SM_2mSofa=1
 /Game/Assets/Aziz/Assets/SM_1mSofa.SM_1mSofa=1
+/Game/Assets/Aziz/Assets/SM_Table.SM_Table=1
+/Game/Assets/Aziz/Assets/SM_Curtains.SM_Curtains=1
 
 [MaterialEditor]
 PrimType=1
@@ -2636,4 +2637,9 @@ PerBlueprintSettings=()
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
 
