--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -262,7 +262,7 @@ MaterialExpressionStaticBoolParameter="\"Object\" "
 MaterialExpressionStaticSwitchParameter="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -325,7 +325,7 @@ MRUItem1=/Game/attic_migration
 MRUItem2=/Game/abandonedroom_Migration
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Assets/Aziz/Assets/RockingChair
+ContentBrowserTab1.SelectedPaths=/Game/Assets/Aziz/Assets/FlowerLamp
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=True
@@ -359,7 +359,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/Aziz/Assets
+ContentBrowserDrawer.SelectedPaths=/Game/Assets/Aziz/Assets/FlowerLamp
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -958,6 +958,7 @@ MaterialExpressionStaticBoolParameter.MaterialExpression=True
 MaterialExpressionStaticSwitchParameter.General=True
 MaterialExpressionStaticSwitchParameter.MaterialExpressionStaticBoolParameter=True
 MaterialExpressionStaticSwitchParameter.MaterialExpression=True
+Texture2D.Interchange =True
 
 [RootWindow]
 ScreenPosition=X=484.000 Y=580.000
@@ -982,7 +983,7 @@ UNR=../../../../../../Game Projects/Morrigan Hall Github/MorriganHall/MorriganHa
 BRUSH=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 FBX=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 FBXAnim=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
-GenericImport=../../../../../../Game Projects/Morrigan Hall/Assets/SM_1mSofa.fbx
+GenericImport=../../../../../../Game Projects/Morrigan Hall/Assets/SM_WallTile2.fbx
 GenericExport=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 GenericOpen=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 GenericSave=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
@@ -2120,6 +2121,8 @@ UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Enhan
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/Aziz/Assets/FlowerLamp/FlowerLamp_low.FlowerLamp_low;
+RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_Chandelier.SM_Chandelier;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_Curtains.SM_Curtains;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_Table.SM_Table;
 RecentlyPlaced=/Game/Assets/Charlotte/Cupboard.Cupboard;
@@ -2138,8 +2141,6 @@ RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBas
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Assets/Charlotte/Assets/Doors/Door_Group_SM_Door_04_low.Door_Group_SM_Door_04_low;
 RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_21
-RecentlyPlaced=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01_Inst.Wall_Paper_Char_01_Inst;
-RecentlyPlaced=/Game/M4/Tashan/Assets/wallpapers_sm_wallpaper_002.wallpapers_sm_wallpaper_002;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2257,26 +2258,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Aziz/Assets/Fireplace/ID_1
-MRUItem1=/Game/Assets/Aziz/Assets/SM_Curtains
-MRUItem2=/Game/Assets/Aziz/Assets/SM_Table
-MRUItem3=/Game/Living_Room
-MRUItem4=/Game/Assets/Aziz/Assets/SM_1mSofa
-MRUItem5=/Game/Assets/Aziz/Assets/SM_2mSofa
-MRUItem6=/Game/Assets/Aziz/Assets/RockingChair/RockingChair_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem7=/Game/Assets/Aziz/Assets/RockingChair/RockingChair_low
-MRUItem8=/Game/Assets/Aziz/Assets/RockingChair/MI_RockingChair
-MRUItem9=/Game/Assets/Aziz/Assets/SM_WindowTile
-MRUItem10=/Game/Assets/Aziz/Assets/SM_WallTile
-MRUItem11=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture8
-MRUItem12=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture7
-MRUItem13=/Game/Assets/Aziz/Assets/Fireplace/Fireplace
-MRUItem14=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture6
-MRUItem15=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture5
-MRUItem16=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture4
-MRUItem17=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture3
-MRUItem18=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture2
-MRUItem19=/Game/Assets/Aziz/Assets/Fireplace/MM_FireplaceTexture1
+MRUItem0=/Game/Assets/Aziz/Assets/FlowerLamp/FlowerLamp_low
+MRUItem1=/Game/Assets/Aziz/Assets/FlowerLamp/MI_FlowerLamp
+MRUItem2=/Game/Assets/Aziz/Assets/FlowerLamp/FlowerLamp_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem3=/Game/Assets/Aziz/Assets/FlowerLamp/FlowerLamp_low_DefaultMaterial_BaseColor
+MRUItem4=/Game/Assets/Aziz/Assets/Lamp/FlowerLamp_low
+MRUItem5=/Game/Assets/Aziz/Assets/SM_WallTile2
+MRUItem6=/Game/Living_Room
+MRUItem7=/Game/Assets/Aziz/Assets/Fireplace/ID_1
+MRUItem8=/Game/Assets/Aziz/Assets/SM_Curtains
+MRUItem9=/Game/Assets/Aziz/Assets/SM_Table
+MRUItem10=/Game/Assets/Aziz/Assets/SM_1mSofa
+MRUItem11=/Game/Assets/Aziz/Assets/SM_2mSofa
+MRUItem12=/Game/Assets/Aziz/Assets/RockingChair/RockingChair_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem13=/Game/Assets/Aziz/Assets/RockingChair/RockingChair_low
+MRUItem14=/Game/Assets/Aziz/Assets/RockingChair/MI_RockingChair
+MRUItem15=/Game/Assets/Aziz/Assets/SM_WindowTile
+MRUItem16=/Game/Assets/Aziz/Assets/SM_WallTile
+MRUItem17=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture8
+MRUItem18=/Game/Assets/Aziz/Assets/Fireplace/MI_FireplaceTexture7
+MRUItem19=/Game/Assets/Aziz/Assets/Fireplace/Fireplace
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
@@ -2331,6 +2332,11 @@ MRUItem19=/Game/Assets/Aziz/Assets/Fireplace/MM_FireplaceTexture1
 /Game/Assets/Aziz/Assets/SM_1mSofa.SM_1mSofa=1
 /Game/Assets/Aziz/Assets/SM_Table.SM_Table=1
 /Game/Assets/Aziz/Assets/SM_Curtains.SM_Curtains=1
+/Game/Assets/Aziz/Assets/SM_WallTile2.SM_WallTile2=1
+/Game/Assets/Aziz/Assets/FlowerLamp/MI_FlowerLamp.MI_FlowerLamp=1
+/Game/Assets/Aziz/Assets/FlowerLamp/FlowerLamp_low_DefaultMaterial_BaseColor.FlowerLamp_low_DefaultMaterial_BaseColor=1
+/Game/Assets/Aziz/Assets/FlowerLamp/FlowerLamp_low_DefaultMaterial_OcclusionRoughnessMetallic.FlowerLamp_low_DefaultMaterial_OcclusionRoughnessMetallic=1
+/Game/Assets/Aziz/Assets/FlowerLamp/FlowerLamp_low.FlowerLamp_low=1
 
 [MaterialEditor]
 PrimType=1
