--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -262,7 +262,7 @@ MaterialExpressionStaticBoolParameter="\"Object\" "
 MaterialExpressionStaticSwitchParameter="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -429,6 +429,8 @@ Texture2D.LevelOfDetail=True
 Texture2D.Compression=True
 Texture2D.Interchange=True
 Texture2D.Interchange=False
+Texture2D.Interchange=True
+Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
@@ -2260,24 +2262,24 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Aziz/Assets/Bookshelf/Bookshelf_low_LowPoly_OcclusionRoughnessMetallic
-MRUItem1=/Game/Assets/Aziz/Assets/Bookshelf/Bookshelf_low_LowPoly_Normal
-MRUItem2=/Game/Assets/Aziz/Assets/Bookshelf/Bookshelf_low_LowPoly_BaseColor
-MRUItem3=/Game/Assets/Aziz/Assets/Bookshelf/MI_Bookshelf2
-MRUItem4=/Game/Assets/Aziz/Assets/Bookshelf/Bookshelf_low
-MRUItem5=/Game/Assets/Aziz/Assets/Bookshelf/Bookshelf_low_LowPoly3_OcclusionRoughnessMetallic
-MRUItem6=/Game/Assets/Aziz/Assets/Bookshelf/Books_low_LowPoly3_OcclusionRoughnessMetallic
-MRUItem7=/Game/Assets/Aziz/Assets/Bookshelf/Books_low
-MRUItem8=/Game/Assets/Aziz/Assets/Bookshelf/MI_Bookshelf
-MRUItem9=/Game/Assets/Aziz/Assets/Bookshelf/MI_Books
-MRUItem10=/Game/Assets/Aziz/Assets/Lamp/MM_LampBody
-MRUItem11=/Game/Assets/Aziz/Assets/Lamp/Lamp
-MRUItem12=/Game/Assets/Aziz/Assets/Lamp/MI_Lamp2
-MRUItem13=/Game/Assets/Aziz/Assets/Lamp/Lamp_low_Low1_OcclusionRoughnessMetallic
-MRUItem14=/Game/Assets/Aziz/Assets/Lamp/Lamp_low_Low6_OcclusionRoughnessMetallic
-MRUItem15=/Game/Assets/Aziz/Assets/Lamp/MI_Lamp1
-MRUItem16=/Game/Assets/Aziz/Assets/Bookshelf/Lamp
-MRUItem17=/Game/Living_Room
+MRUItem0=/Game/Assets/Aziz/Assets/Bookshelf/Bookshelf_low
+MRUItem1=/Game/Assets/Aziz/Assets/Bookshelf/MI_Bookshelf2
+MRUItem2=/Game/Assets/Aziz/Assets/Bookshelf/Bookshelf_low_LowPoly_OcclusionRoughnessMetallic
+MRUItem3=/Game/Living_Room
+MRUItem4=/Game/Assets/Aziz/Assets/Bookshelf/Bookshelf_low_LowPoly_BaseColor
+MRUItem5=/Game/Assets/Aziz/Assets/Bookshelf/Bookshelf_low_LowPoly_Normal
+MRUItem6=/Game/Assets/Aziz/Assets/Bookshelf/Bookshelf_low_LowPoly3_OcclusionRoughnessMetallic
+MRUItem7=/Game/Assets/Aziz/Assets/Bookshelf/Books_low_LowPoly3_OcclusionRoughnessMetallic
+MRUItem8=/Game/Assets/Aziz/Assets/Bookshelf/Books_low
+MRUItem9=/Game/Assets/Aziz/Assets/Bookshelf/MI_Bookshelf
+MRUItem10=/Game/Assets/Aziz/Assets/Bookshelf/MI_Books
+MRUItem11=/Game/Assets/Aziz/Assets/Lamp/MM_LampBody
+MRUItem12=/Game/Assets/Aziz/Assets/Lamp/Lamp
+MRUItem13=/Game/Assets/Aziz/Assets/Lamp/MI_Lamp2
+MRUItem14=/Game/Assets/Aziz/Assets/Lamp/Lamp_low_Low1_OcclusionRoughnessMetallic
+MRUItem15=/Game/Assets/Aziz/Assets/Lamp/Lamp_low_Low6_OcclusionRoughnessMetallic
+MRUItem16=/Game/Assets/Aziz/Assets/Lamp/MI_Lamp1
+MRUItem17=/Game/Assets/Aziz/Assets/Bookshelf/Lamp
 MRUItem18=/Game/Assets/Aziz/Assets/FlowerLamp/FlowerLamp_low
 MRUItem19=/Game/Assets/Aziz/Assets/FlowerLamp/MI_FlowerLamp
 
@@ -2614,6 +2616,7 @@ WmfMediaSettings=True
 Texture2DArray.LevelOfDetail=False
 MaterialEditorInstanceConstant.General=True
 FbxImportUI.Mesh=True
+Texture2D.Compression=True
 
 [FEditorModeTools]
 CoordSystem=1
