--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -262,7 +262,7 @@ MaterialExpressionStaticBoolParameter="\"Object\" "
 MaterialExpressionStaticSwitchParameter="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -326,7 +326,7 @@ MRUItem1=/Game/attic_migration
 MRUItem2=/Game/abandonedroom_Migration
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Assets/Aziz/Assets/Bookshelf
+ContentBrowserTab1.SelectedPaths=/Game/Assets/Aziz/Assets/DoorWay
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=True
@@ -360,7 +360,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/Aziz/Assets/Bookshelf
+ContentBrowserDrawer.SelectedPaths=/Game/Assets/Aziz/Assets/DoorWay
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -429,6 +429,7 @@ Texture2D.LevelOfDetail=True
 Texture2D.Compression=True
 Texture2D.Interchange=True
 Texture2D.Interchange=False
+Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
@@ -962,7 +963,6 @@ MaterialExpressionStaticBoolParameter.MaterialExpression=True
 MaterialExpressionStaticSwitchParameter.General=True
 MaterialExpressionStaticSwitchParameter.MaterialExpressionStaticBoolParameter=True
 MaterialExpressionStaticSwitchParameter.MaterialExpression=True
-Texture2D.Interchange =True
 
 [RootWindow]
 ScreenPosition=X=484.000 Y=580.000
@@ -2125,6 +2125,7 @@ UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Enhan
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/Aziz/Assets/DoorWay/ArchDoorFrameLarge.ArchDoorFrameLarge;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/Bookshelf/Bookshelf_low.Bookshelf_low;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/Lamp/Lamp.Lamp;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_WindowFrame.SM_WindowFrame;
@@ -2144,7 +2145,6 @@ RecentlyPlaced=/Script/Engine.SkyAtmosphere;/Engine/Transient.ActorFactorySkyAtm
 RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2262,10 +2262,10 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Aziz/Assets/Bookshelf/Bookshelf_low
-MRUItem1=/Game/Assets/Aziz/Assets/Bookshelf/MI_Bookshelf2
-MRUItem2=/Game/Assets/Aziz/Assets/Bookshelf/Bookshelf_low_LowPoly_OcclusionRoughnessMetallic
-MRUItem3=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Assets/Aziz/Assets/Bookshelf/Bookshelf_low
+MRUItem2=/Game/Assets/Aziz/Assets/Bookshelf/MI_Bookshelf2
+MRUItem3=/Game/Assets/Aziz/Assets/Bookshelf/Bookshelf_low_LowPoly_OcclusionRoughnessMetallic
 MRUItem4=/Game/Assets/Aziz/Assets/Bookshelf/Bookshelf_low_LowPoly_BaseColor
 MRUItem5=/Game/Assets/Aziz/Assets/Bookshelf/Bookshelf_low_LowPoly_Normal
 MRUItem6=/Game/Assets/Aziz/Assets/Bookshelf/Bookshelf_low_LowPoly3_OcclusionRoughnessMetallic
