--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -262,7 +262,7 @@ MaterialExpressionStaticBoolParameter="\"Object\" "
 MaterialExpressionStaticSwitchParameter="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -965,7 +965,7 @@ MaterialExpressionStaticSwitchParameter.MaterialExpressionStaticBoolParameter=Tr
 MaterialExpressionStaticSwitchParameter.MaterialExpression=True
 
 [RootWindow]
-ScreenPosition=X=484.000 Y=580.000
+ScreenPosition=X=484.000 Y=296.000
 WindowSize=X=1290.000 Y=730.000
 InitiallyMaximized=True
 
@@ -987,7 +987,7 @@ UNR=../../../../../../Game Projects/Morrigan Hall Github/MorriganHall/MorriganHa
 BRUSH=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 FBX=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 FBXAnim=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
-GenericImport=../../../../../../Game Projects/Morrigan Hall/Assets/SM_WindowFrame.fbx
+GenericImport=../../../../../../Game Projects/Morrigan Hall/Assets/SM_GlassCabinet.fbx
 GenericExport=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 GenericOpen=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
 GenericSave=D:/UNIGITHUB/MorriganHall/MorriganHall/Content/
