--- a/MorriganHall/Config/DefaultEngine.ini
+++ b/MorriganHall/Config/DefaultEngine.ini
@@ -26,6 +26,7 @@ r.SkinCache.CompileShaders=True
 r.RayTracing=True
 r.VirtualTextures=True
 bEnableVirtualTextureOpacityMask=True
+r.AllowStaticLighting=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
