--- a/MorriganHall/Saved/Config/WindowsEditor/Engine.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/Engine.ini
@@ -67,9 +67,8 @@ JavaPath=(Path="")
 [/Script/UnrealEd.UnrealEdEngine]
 TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbnails/OpenWorld.OpenWorld",Map="/Engine/Maps/Templates/OpenWorld",DisplayName="Open World",Category="OpenWorld")
 TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbnails/Basic.Basic",Map="/Engine/Maps/Templates/Template_Default",DisplayName="Basic",Category="")
+None=======
 
-<<<<<<< Updated upstream
-=======
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
 
@@ -81,4 +80,3 @@ StickyKeysConfirmation=False
 ToggleKeysConfirmation=False
 FilterKeysConfirmation=False
 
->>>>>>> Stashed changes
