--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -365,7 +365,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/Aziz/Assets
+ContentBrowserDrawer.SelectedPaths=/Game/Assets/Aziz/Assets/Bookshelf
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -445,7 +445,7 @@ Texture2D.Adjustments=True
 Texture2D.File Path=True
 Texture2D.Compositing=True
 MaterialExpressionConstant.MaterialExpressionConstant=True
-MaterialExpressionConstant.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpression=False
 MaterialExpressionScalarParameter.General=True
 MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
 MaterialExpressionScalarParameter.MaterialExpression=True
@@ -2049,7 +2049,6 @@ RecentsFiles=C:/UE5/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/in
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
@@ -2162,6 +2161,8 @@ BrushComponent=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Len
 StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Mobile Depth of Field,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Color Grading.Color Grading|Temperature,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Global Illumination.Global Illumination|Ray Tracing Global Illumination,PostProcessVolume.Reflections.Reflections|Lumen Reflections,PostProcessVolume.Reflections.Reflections|Screen Space Reflections,PostProcessVolume.Reflections.Reflections|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Rendering Features.Rendering Features|Translucency,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Translucency,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/Aziz/Assets/Bookshelf/Books_low.Books_low;
+RecentlyPlaced=/Game/Assets/Aziz/Assets/MM_Glass.MM_Glass;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_SunGuard.SM_SunGuard;
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_19
@@ -2180,8 +2181,6 @@ RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_1mSofa.SM_1mSofa;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_2mSofa.SM_2mSofa;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/RockingChair/RockingChair_low.RockingChair_low;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Assets/Aziz/Assets/Fireplace/ID_1.ID_1;
-RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_WallTile.SM_WallTile;
 None=======
 
 [FBX_Import_UI_Option_FbxImportUI]
@@ -2300,26 +2299,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Aziz/Assets/RockingChair/RockingChair_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem1=/Game/Assets/Aziz/Assets/Material
-MRUItem2=/Game/Assets/Aziz/Assets/Material_001
-MRUItem3=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem4=/Game/Living_Room
-MRUItem5=/Game/Assets/Tashan/staircase/stars_Cube_004
-MRUItem6=/Game/Assets/Tashan/staircase/stars_Cube_002
-MRUItem7=/Game/Assets/Tashan/staircase/stars_Cube
-MRUItem8=/Game/Assets/Tashan/staircase/stars_BezierCurve_001
-MRUItem9=/Game/M4/Tashan/Assets/blockout/room_v5_Plane_006
-MRUItem10=/Game/attic_migration
-MRUItem11=/Game/Assets/Aziz/A_plank
-MRUItem12=/Game/Assets/Charlotte/Assets/Doors/Door_Group_SM_Door_04_low_Blueprint
-MRUItem13=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01_Inst
-MRUItem14=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01
-MRUItem15=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_01_BaseColor
-MRUItem16=/Game/M4/Tashan/Assets/mat_blend_Inst2
-MRUItem17=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01_Inst
-MRUItem18=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01
-MRUItem19=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Brick_01
+MRUItem0=/Game/Assets/Aziz/Assets/MM_Glass
+MRUItem1=/Game/Assets/Aziz/Assets/RockingChair/RockingChair_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem2=/Game/Assets/Aziz/Assets/Material
+MRUItem3=/Game/Assets/Aziz/Assets/Material_001
+MRUItem4=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem5=/Game/Living_Room
+MRUItem6=/Game/Assets/Tashan/staircase/stars_Cube_004
+MRUItem7=/Game/Assets/Tashan/staircase/stars_Cube_002
+MRUItem8=/Game/Assets/Tashan/staircase/stars_Cube
+MRUItem9=/Game/Assets/Tashan/staircase/stars_BezierCurve_001
+MRUItem10=/Game/M4/Tashan/Assets/blockout/room_v5_Plane_006
+MRUItem11=/Game/attic_migration
+MRUItem12=/Game/Assets/Aziz/A_plank
+MRUItem13=/Game/Assets/Charlotte/Assets/Doors/Door_Group_SM_Door_04_low_Blueprint
+MRUItem14=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01_Inst
+MRUItem15=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01
+MRUItem16=/Game/Assets/Charlotte/Assets/WallPaper/Wall_Paper_01_BaseColor
+MRUItem17=/Game/M4/Tashan/Assets/mat_blend_Inst2
+MRUItem18=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01_Inst
+MRUItem19=/Game/Assets/Amy/Textures/Brick_and_Concrete/M_Wood_01
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
@@ -2403,6 +2402,7 @@ None=======
 /Engine/BasicShapes/BasicShapeMaterial.BasicShapeMaterial=1
 /Game/Assets/Aziz/Assets/Material_001.Material_001=1
 /Game/Assets/Aziz/Assets/Material.Material=1
+/Game/Assets/Aziz/Assets/MM_Glass.MM_Glass=1
 
 [MaterialEditor]
 PrimType=1
